--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
- Theme Name:   SA Learning
- Description:  Custom website for SA Learning Website.
+ Theme Name:   SA Learning Centre
+ Description:  Custom website for SA Learning Centre.
  Author:       Boylen Team
  Author URI:   https://www.boylen.com.au
  Template:     neve
