--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -4,6 +4,10 @@
     --fa-arrow-left: "\f060";
     --fa-phone: "\f095";
     --fa-close: "\f00d";
+    --fa-home: "\f015";
+    --fa-calendar: "\f073";
+    --fa-map-marker-alt: "\f3c5";
+    --fa-clock: "\f017";
 }
 
 /* --------------------------- */
@@ -14,7 +18,7 @@ $pcolor: #1e7546;
 $scolor: #102f47;
 $actcolor1: #e4dfdb;
 $actcolor2: #b8b8b8;
-$actcolor3: #b9b9b9;
+$actcolor3: #729ab9;
 $text-color: #102f47;
 $body-bg: #fffdf1;
 $white: #fff;
