--- a/assets/scss/_utilities.scss
+++ b/assets/scss/_utilities.scss
@@ -92,16 +92,28 @@
   margin-bottom: 10px;
 }
 
-.smb-large {
-  margin-bottom: 50px;
-}
-
 .smb-20 {
   margin-bottom: 20px;
 }
 
+.smb-30 {
+  margin-bottom: 30px;
+}
+
+.smb-large {
+  margin-bottom: 50px;
+}
+
 .smt-large {
   margin-top: 40px;
+}
+
+.smr-50 {
+  margin-right: 50px !important;
+}
+
+.spt-25 {
+  padding-top: 25px !important;
 }
 
 .sp-large {
@@ -121,8 +133,20 @@
 .text-h5 {
   text-transform: uppercase;
   font-size: var(--h5fontsize);
+  font-weight: var(--h5fontweight);
 }
 
 .uppercase {
   text-transform: uppercase;
+}
+
+.round-border {
+  border-radius: $smallRadius;
+}
+
+.round-box-with-gap {
+  border-radius: $smallRadius;
+  max-width: 96vw;
+  margin-left: calc(50% - 48vw);
+  margin-right: calc(50% - 48vw);
 }
