--- a/assets/scss/partials/_footer.scss
+++ b/assets/scss/partials/_footer.scss
@@ -1,11 +1,54 @@
 @use 'variables' as *;
 
 .site-footer {
-  .widget .widget-title {
-    font-weight: 400;
-    font-family: var(--headingsfontfamily);
-    color: $actcolor3;
-    font-size: 1.5rem;
+  @media (max-width: 781px) {
+    .widget-area {
+      padding-bottom: 20px;
+    }
+  }
+  .widget {
+    .widget-title {
+      font-weight: 400;
+      font-family: var(--headingsfontfamily);
+      color: $actcolor3;
+      font-size: 1.5rem;
+    }
+    @media (max-width: 781px) {
+      text-align: center;
+      margin-bottom: 0;
+
+      .widget-title {
+        cursor: pointer;
+        position: relative;
+        padding-right: 30px;
+        user-select: none;
+        display: inline-block;
+        
+        &::after {
+          content: var(--fa-arrow-right);
+          position: absolute;
+          right: 0;
+          bottom: 2px;
+          transform: rotate(90deg);
+          font-family: 'Font Awesome 5 Free';
+          font-weight: 600;
+          font-size: .9rem;
+          line-height: 1;
+          transition: transform 0.3s ease;
+        }
+        
+        &.active::after {
+          transform: rotate(270deg);
+        }
+      }
+      
+      .menu-footer-about-container,
+      .menu-container,
+      > div[class*="menu-"] {
+        display: none;
+        padding-bottom: 20px;
+      }
+    }
   }
 
   .footer-top {
@@ -18,6 +61,9 @@
       padding-bottom: 30px;
       border-bottom: 1px solid $white;
     }
+    @media (max-width: 781px) {
+      padding-top: 25px;
+    }
   }
 
   .footer-bottom {
@@ -26,6 +72,21 @@
       font-size: .80rem;
       color: $white;
       font-weight: 300;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .siteby a {
+        color: $white;
+      }
+      
+      @media (max-width: 781px) {
+        flex-direction: column;
+        gap: 10px;
+        text-align: center;
+        .component-wrap {
+          text-align: center;
+        }
+      }
     }
     .nv-footer-content {
       .hfg-slot.c-left {
