--- a/assets/scss/partials/_forms.scss
+++ b/assets/scss/partials/_forms.scss
@@ -22,6 +22,11 @@
         background-position: right 20px center;
         background-size: 10px;
         padding-right: 40px;
+        border-radius: 50px;
+        @media (max-width: 781px) {
+          line-height: 1 !important;
+          padding: 12px 40px 12px 25px;
+        }
     }
   }
   .gform_validation_errors {
